// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Icon Light icon 1`] = `
<Icon
  color="#0066b1"
  name="circle-info"
  size={16}
  type="light"
/>
`;

exports[`Icon Solid icon 1`] = `
<Icon
  color="#0066b1"
  name="circle-info"
  size={16}
  type="solid"
/>
`;

exports[`Icon With color and size 1`] = `
<Icon
  color="#ff0000"
  name="circle-info"
  size={32}
  type="light"
/>
`;

exports[`Icon With rotation 1`] = `
<Icon
  color="#0066b1"
  name="circle-info"
  size={16}
  transform={
    {
      "rotate": 90,
    }
  }
  type="light"
/>
`;
